--- a/surge.ini
+++ b/surge.ini
@@ -20,19 +20,18 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 AI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT`.*
-custom_proxy_group=🎵 Music`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT`.*
-custom_proxy_group=📺 Video`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT`.*
-custom_proxy_group=🎮 Game`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT`.*
-custom_proxy_group=📺 AppleTV`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT`.*
-custom_proxy_group=▶️ Emby`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 DIRECT`.*
-custom_proxy_group=🔗 DIRECT`select`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]🔗 DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🔗 DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🔗 DIRECT
+custom_proxy_group=💬 AI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=🎵 Music`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📺 Video`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=🎮 Game`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📺 AppleTV`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=▶️ Emby`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 ️
 ;设置分组标志位
 
