--- a/clash.ini
+++ b/clash.ini
@@ -1,7 +1,7 @@
 [custom]
 
 ;设置规则标志位
-ruleset=🆎 AdBlock,https://raw.githubusercontent.com/zzfc223/srm/main/rules/Ad.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/zzfc223/srm/main/rules/Ad.list
 ruleset=💬 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=💬 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 ruleset=📺 Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
@@ -27,9 +27,9 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=💬 AI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
 custom_proxy_group=📺 Media`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
 custom_proxy_group=🎮 Game`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`.*
-custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 ;设置分组标志位
 
 enable_rule_generator=true
